--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
   </div>
   <div class="hint" id="hint">Press 'S' to toggle controls</div>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="./src/main.js"></script>
 </body>
 
 </html>
